stopped flickering scrollbar from appearing when resizing chat input. References #461

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -28,6 +28,7 @@
 
 .trpChatInputBoxTextArea {
   width: 394px;
+  overflow: hidden;
 }
 
 .trpChatItem {
